--- a/Video.html
+++ b/Video.html
@@ -7,8 +7,8 @@
     <title>Video</title>
 </head>
 <body>
-    <video>
-        
+    <video controls>
+        <source src="Birthday.mp4" type="video/mp4">
     </video>
 </body>
 </html>
