--- a/HTML/Table.html
+++ b/HTML/Table.html
@@ -9,7 +9,7 @@
 </head>
 <body bgcolor="pink">
   <h1 style="text-align: center;">Student Profile</h1>
-  <table border="1" align="center">
+  <table border="1" align="center" style="color:rgb(255, 0, 0)">
    <th rowspan="2">Department</th> <th rowspan="2">Name</th><th rowspan="2">Student ID</th><th rowspan="2">CGPA</th><th colspan="2">CT Marks</th>
    <tr><th>CT-1</th><th>CT-2</th></tr>
    <tr><td rowspan=3 align="center">CSE</td><td>Iffat Bin Hossain</td><td>2005087</td><td>2.5</td><td>10</td><td>15</td></tr>
