--- a/Projects/Personal Portfolio/portfolio.html
+++ b/Projects/Personal Portfolio/portfolio.html
@@ -7,17 +7,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Portfolio</title>
     <link rel="stylesheet" href="portfolio.css">
+    <script src="https://kit.fontawesome.com/53e0592862.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <header>
         <nav>
-            <div class="PortfolioName">Nabil's Portfolio</div>
+
+            <div class="PortfolioName">
+                <i class="fa-sharp fa-solid fa-briefcase"></i> Nabil's Portfolio
+            </div>
             <div class="options">
                 <ul>
                     <li><a href="">Home</a></li>
                     <li><a href="">About</a></li>
-                    <li><a href="">Help</a></li>
+                    <li><a href="">Favourites</a></li>
                     <li><a href="">Projects</a></li>
                     <li><a href="">Contact</a></li>
                 </ul>
@@ -30,17 +34,44 @@
                 <div> and I am a </div>
                 <div>
                     <span id="Element"></span>
-                </div>
+                </div class="button"><br>
+                <button type="button">Visit Drive</button>
+                <button type="button">Visit GitHub</button>
             </div>
             </div>
             <div class="rightSection">
                 <img src="Logo.jpg">
             </div>
+
+        </section>
+        <hr color="purple">
+        <section class="secondSection">
+            <h1>Socials</h1>
+            <div class="Social">
+                <a href="https://www.facebook.com/profile.php?id=100028419873258&mibextid=ZbWKwL"><i
+                        class="fa-brands fa-facebook"></i></a>
+                <a href="https://instagram.com/nirgun_nabil?igshid=MzNlNGNkZWQ4Mg=="><i
+                        class="fa-brands fa-square-instagram"></i></a>
+                <a href="https://www.linkedin.com/in/iffat-bin-hossain-54b3a4275/"> <i
+                        class="fa-brands fa-linkedin"></i></a>
+                <a
+                    href="https://www.spotify.com/bd-en/account/overview/?utm_source=spotify&utm_medium=menu&utm_campaign=your_account"><i
+                        class="fa-brands fa-spotify"></i></a>
+            </div><br>
+            <h1>Github</h1>
+            <div class="github">
+                <a href="https://github.com/Iffat-Bin-Hossain"><i class="fa-brands fa-github"></i></a>
+            </div>
+
+
+
+
+
         </section>
     </main>
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
     <script>
-        var typed = new Typed('#Element', { strings: ['Student', 'Learner', 'Programmer'], typespeed:100,});
+        var typed = new Typed('#Element', { strings: ['Student', 'Learner', 'Programmer'], typespeed: 100, });
     </script>
 </body>
 
