--- a/Projects/Personal Portfolio/portfolio.html
+++ b/Projects/Personal Portfolio/portfolio.html
@@ -13,17 +13,17 @@
 <body>
     <header>
         <nav>
-
             <div class="PortfolioName">
                 <i class="fa-sharp fa-solid fa-briefcase"></i> Nabil's Portfolio
             </div>
             <div class="options">
                 <ul>
-                    <li><a href="">Home</a></li>
-                    <li><a href="">About</a></li>
-                    <li><a href="">Favourites</a></li>
-                    <li><a href="">Projects</a></li>
-                    <li><a href="">Contact</a></li>
+                    <li onclick="window.location.href='portfolio.html';">Home</li>
+                    <li onclick="window.location.href='About.html';">About</li>
+                    <li onclick="window.location.href='Favourites.html';">Favourites</li>
+                    <li onclick="window.location.href='Project.html';">Projects</li>
+                    <li onclick="window.location.href='Contact.html';">Contact</li>
+                    <li><i class="fa-solid fa-sun"></i></li>
                 </ul>
             </div>
         </nav>
@@ -35,8 +35,8 @@
                 <div>
                     <span id="Element"></span>
                 </div class="button"><br>
-                <button type="button">Visit Drive</button>
-                <button type="button">Visit GitHub</button>
+               <button type="button" onclick="window.location.href='https://drive.google.com/drive/my-drive';">Visit Drive</button>
+                <button type="button" onclick="window.location.href='https://github.com/Iffat-Bin-Hossain';">Visit GitHub</button>
             </div>
             </div>
             <div class="rightSection">
@@ -58,10 +58,13 @@
                     href="https://www.spotify.com/bd-en/account/overview/?utm_source=spotify&utm_medium=menu&utm_campaign=your_account"><i
                         class="fa-brands fa-spotify"></i></a>
             </div><br>
-            <h1>Github</h1>
-            <div class="github">
-                <a href="https://github.com/Iffat-Bin-Hossain"><i class="fa-brands fa-github"></i></a>
-            </div>
+            <h1>Address-</h1>
+            <address>
+                Room-109<br>
+                Dr. M A Rashid Hall,<abbr title="Bangladesh University Of Engineering & Technology">BUET</abbr><br>
+                Dhaka-1000
+            </address><br>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3652.6160903416517!2d90.3871250750139!3d23.725399978687463!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755b8dc96497aa3%3A0xc1248f67bf7d0542!2sDr.%20M.%20A.%20Rashid%20Hall%2C%20BUET!5e0!3m2!1sen!2sbd!4v1684908454864!5m2!1sen!2sbd" width="400" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
 
 
