--- a/Projects/Personal Portfolio/Home.html
+++ b/Projects/Personal Portfolio/Home.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Portfolio</title>
-    <link rel="stylesheet" href="portfolio.css">
+    <link rel="stylesheet" href="Home.css">
     <script src="https://kit.fontawesome.com/53e0592862.js" crossorigin="anonymous"></script>
 </head>
 
